Cree el HTML de destination-mars.html y correji el index.html

--- a/index.html
+++ b/index.html
@@ -9,54 +9,31 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div class="container">
-            <header>
-                <img src="/" alt="Logo de la compañia espacial">
-                <div class="header__border"></div>
-                <nav class="header__nav">
-                    <ul class="header__nav-items">
-                        <li><a href="/"></a> <b>00</b>  HOME</li>
-                        <li><a href="/"></a> <b>01</b>  DESTINATION</li>
-                        <li><a href="/"></a> <b>02</b>  CREW</li>
-                        <li><a href="/"></a> <b>03</b>  TECHNOLOGY</li>
-                    </ul>
-                </nav>
-               
-            </header>
-            <maim class="index">
-                <section class="index__left">
-                    <h1 class="index__left-title"> <b>01</b> PICK YOUR DESTINATION</h1>
+        <header>
+            <img src="/" alt="Logo de la compañia espacial">
+            <div class="header__border"></div>
+            <nav class="header__nav">
+                <ul class="header__nav-items">
+                    <li><a href="/"></a> <b>00</b>  HOME</li>
+                    <li><a href="/"></a> <b>01</b>  DESTINATION</li>
+                    <li><a href="/"></a> <b>02</b>  CREW</li>
+                    <li><a href="/"></a> <b>03</b>  TECHNOLOGY</li>
+                </ul>
+            </nav>
+        </header>
+        <main class="main__home">
+            <div class="main__home-content">
+                <section class="main__home-content__left">
+                    <p>SO, YOU WANT TO TRAVEL TO <b>space</b> </p>
+                    <p>Let`s face it: if you want to go to space. You might as well <br> genuinely go to outer space and not hover kind of on the <br> edge of it. Well sit back, and relax because we`ll give you <br> a trully out of this world experience!</p>
                 </section>
-                <section class="index__right">
-                    <div class="index__right-content">
-                        <section class="index__right-content__top">
-                            <ul>
-                                <li><a href="/">MOON</a></li>
-                                <li><a href="/">MARS</a></li>
-                                <li><a href="/">EUROPA</a></li>
-                                <li><a href="/">TITAN</a></li>
-                            </ul>
-                            <h2 >MARS</h2>
-                            <p>
-                                Don`t forget to pack your hiking boots. You'll need them <br> to tackle Olympus Mons, the tallest planetary mountain   in <br>
-                                our solar system. It`s two and a half times the size of <br> everest!
-                            </p>
-                        </section>
-                   
-                      <section class="index__right-content__bottom">
-                          <div class="left">
-                              <p>AVG. DDISTANCE</p>
-                              <p>225 MIL. KM</p>
-                          </div>
-                          <div class="top">
-                              <p>Est. TRAVEL TIME</p>
-                              <p> 9 MONTHS</p>
-                          </div>
-                      </section>
+                <section class="main__home-content__right">
+                    <div>
+                        <p>EXPLORE</p>
                     </div>
                 </section>
-            </maim>
-        </div>
+            </div>
+        </main>
     </body>
 
 </html>    
