--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     </head>
     <body>
         <header>
-            <img src="/" alt="Logo de la compañia espacial">
-            <div class="header__border"></div>
+            <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
             <nav class="header__nav">
+                <div class="header__nav-border"></div>
                 <ul class="header__nav-items">
-                    <li><a href="/"></a> <b>00</b>  HOME</li>
-                    <li><a href="/"></a> <b>01</b>  DESTINATION</li>
-                    <li><a href="/"></a> <b>02</b>  CREW</li>
-                    <li><a href="/"></a> <b>03</b>  TECHNOLOGY</li>
+                    <li><a href="/"><b>00</b>  HOME</a> </li>
+                    <li><a href="/"><b>01</b>  DESTINATION</a> </li>
+                    <li><a href="/"> <b>02</b>  CREW</a></li>
+                    <li><a href="/"><b>03</b>  TECHNOLOGY</a> </li>
                 </ul>
             </nav>
         </header>
