--- a/crew-commander.html
+++ b/crew-commander.html
@@ -9,6 +9,18 @@
             <link rel="stylesheet" href="css/style.css">
         </head>
         <body>
+            <header>
+                <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
+                <nav class="header__nav">
+                    <div class="header__nav-border"></div>
+                    <ul class="header__nav-items">
+                        <li><a href="/"><b>00</b>  HOME</a> </li>
+                        <li><a href="/"><b>01</b>  DESTINATION</a> </li>
+                        <li><a href="/"> <b>02</b>  CREW</a></li>
+                        <li><a href="/"><b>03</b>  TECHNOLOGY</a> </li>
+                    </ul>
+                </nav>
+            </header>
             
         </body>
     
