cree los estilos del home__main

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>NASA</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body>
+    <body class="body__home">
         <header>
             <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
             <nav class="header__nav">
@@ -24,7 +24,8 @@
         <main class="main__home">
             <div class="main__home-content">
                 <section class="main__home-content__left">
-                    <p>SO, YOU WANT TO TRAVEL TO <b>space</b> </p>
+                    <p>SO, YOU WANT TO TRAVEL TO</p>
+                    <p>SPACE</p>
                     <p>Let`s face it: if you want to go to space. You might as well <br> genuinely go to outer space and not hover kind of on the <br> edge of it. Well sit back, and relax because we`ll give you <br> a trully out of this world experience!</p>
                 </section>
                 <section class="main__home-content__right">
