HTML basico del destination moon

--- a/destination-moon.html
+++ b/destination-moon.html
@@ -5,10 +5,10 @@
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
             <meta name="viewport" content="width=device=width, initial-sacle=1.0">
-            <title>NASA</title>
+            <title>Moon</title>
             <link rel="stylesheet" href="css/style.css">
         </head>
-        <body>
+        <body class="moon__destination">
             <header>
                 <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
                 <nav class="header__nav">
@@ -21,6 +21,33 @@
                     </ul>
                 </nav>
             </header>
+            <main class="main__Moon">
+                <section class="Moon__left">
+                    <P class="Moon__left-title"> <b>01</b>  PICK YOUR DESTINATION</P>
+                </section>
+                <section class="Moon__right">
+                    <div class="Moon__right-container">
+                        <ul class="Moon__right-container__nav">
+                            <li><a href="/">MOON</a></li>
+                            <li><a href="/">MARS</a></li>
+                            <li><a href="/">EUROPA</a></li>
+                            <li><a href="/">TITAN</a></li>
+                        </ul>
+                        <h3 class="Moon__right-container__title">MOON</h3>
+                        <p class="Moon__right-container__description">See our planet as you`ve never seen it before. A perfect relaxing trip away to helpregain perspective aand come back refreshed. While you`re there, take in some history by visiting the luna 2 and Apollo 11 landing sites</p>
+                        <div class="Moon__right-container__data">
+                            <div class="left">
+                                <p>AVG. DISTANCE</p>
+                                <p>384,400 KM</p>
+                            </div>
+                            <div class="right">
+                                <p>EST. TRAVEL TIME</p>
+                                <p>3 DAYS</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </main>
         </body>
     
     </html>  
