--- a/destination-moon.html
+++ b/destination-moon.html
@@ -8,7 +8,7 @@
             <title>Moon</title>
             <link rel="stylesheet" href="css/style.css">
         </head>
-        <body class="moon__destination">
+        <body class="body__destination">
             <header>
                 <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
                 <nav class="header__nav">
@@ -21,24 +21,25 @@
                     </ul>
                 </nav>
             </header>
-            <main class="main__Moon">
-                <section class="Moon__left">
-                    <P class="Moon__left-title"> <b>01</b>  PICK YOUR DESTINATION</P>
+            <main class="main__destination">
+                <section class="destination__left">
+                    <P class="destination__left-title"> <b>01</b>  PICK YOUR DESTINATION</P>
+                    <img src="/asset/destination/image-mars.png" alt="Imagen del planeta moon">
                 </section>
-                <section class="Moon__right">
-                    <div class="Moon__right-container">
-                        <ul class="Moon__right-container__nav">
+                <section class="destination__right">
+                    <div class="destination__right-container">
+                        <ul class="destination__right-container__nav">
                             <li><a href="/">MOON</a></li>
                             <li><a href="/">MARS</a></li>
                             <li><a href="/">EUROPA</a></li>
                             <li><a href="/">TITAN</a></li>
                         </ul>
-                        <h3 class="Moon__right-container__title">MOON</h3>
-                        <p class="Moon__right-container__description">See our planet as you`ve never seen it before. A perfect relaxing trip away to helpregain perspective aand come back refreshed. While you`re there, take in some history by visiting the luna 2 and Apollo 11 landing sites</p>
-                        <div class="Moon__right-container__data">
+                        <h3 class="destination__right-container__title">MOON</h3>
+                        <p class="destination__right-container__description">See our planet as you`ve never seen it before. A perfect <br> relaxing trip away to helpregain perspective aand come <br> back refreshed. While you`re there, take in some history <br> by visiting the luna 2 and Apollo 11 landing sites</p>
+                        <div class="destination__right-container__data">
                             <div class="left">
                                 <p>AVG. DISTANCE</p>
-                                <p>384,400 KM</p>
+                                <p>384,400 MIL. KM</p>
                             </div>
                             <div class="right">
                                 <p>EST. TRAVEL TIME</p>
