Listos las paginas (Home, DESTINATION(EUROPA,MOON, MARS, TITAN))

--- a/destination-mars.html
+++ b/destination-mars.html
@@ -5,57 +5,50 @@
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
             <meta name="viewport" content="width=device=width, initial-sacle=1.0">
-            <title>NASA</title>
+            <title>MARS</title>
             <link rel="stylesheet" href="css/style.css">
         </head>
-        <body>
-            <div class="container">
-                <header>
-                    <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
-                    <nav class="header__nav">
-                        <div class="header__nav-border"></div>
-                        <ul class="header__nav-items">
-                            <li><a href="/"><b>00</b>  HOME</a> </li>
-                            <li><a href="/"><b>01</b>  DESTINATION</a> </li>
-                            <li><a href="/"> <b>02</b>  CREW</a></li>
-                            <li><a href="/"><b>03</b>  TECHNOLOGY</a> </li>
+               <body class="body__destination">
+            <header>
+                <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
+                <nav class="header__nav">
+                    <div class="header__nav-border"></div>
+                    <ul class="header__nav-items">
+                        <li><a href="/"><b>00</b>  HOME</a> </li>
+                        <li><a href="/"><b>01</b>  DESTINATION</a> </li>
+                        <li><a href="/"> <b>02</b>  CREW</a></li>
+                        <li><a href="/"><b>03</b>  TECHNOLOGY</a> </li>
+                    </ul>
+                </nav>
+            </header>
+            <main class="main__destination">
+                <section class="destination__left">
+                    <P class="destination__left-title"> <b>01</b>  PICK YOUR DESTINATION</P>
+                    <img src="/asset/destination/image-mars.png" alt="Imagen del planeta moon">
+                </section>
+                <section class="destination__right">
+                    <div class="destination__right-container">
+                        <ul class="destination__right-container__nav">
+                            <li><a href="/">MOON</a></li>
+                            <li><a href="/">MARS</a></li>
+                            <li><a href="/">EUROPA</a></li>
+                            <li><a href="/">TITAN</a></li>
                         </ul>
-                    </nav>
-                </header>
-                <maim class="index">
-                    <section class="index__left">
-                        <h1 class="index__left-title"> <b>01</b> PICK YOUR DESTINATION</h1>
-                    </section>
-                    <section class="index__right">
-                        <div class="index__right-content">
-                            <section class="index__right-content__top">
-                                <ul>
-                                    <li><a href="/">MOON</a></li>
-                                    <li><a href="/">MARS</a></li>
-                                    <li><a href="/">EUROPA</a></li>
-                                    <li><a href="/">TITAN</a></li>
-                                </ul>
-                                <h2 >MARS</h2>
-                                <p>
-                                    Don`t forget to pack your hiking boots. You'll need them <br> to tackle Olympus Mons, the tallest planetary mountain   in <br>
-                                    our solar system. It`s two and a half times the size of <br> everest!
-                                </p>
-                            </section>
-                       
-                          <section class="index__right-content__bottom">
-                              <div class="left">
-                                  <p>AVG. DDISTANCE</p>
-                                  <p>225 MIL. KM</p>
-                              </div>
-                              <div class="top">
-                                  <p>Est. TRAVEL TIME</p>
-                                  <p> 9 MONTHS</p>
-                              </div>
-                          </section>
+                        <h3 class="destination__right-container__title">MARS</h3>
+                        <p class="destination__right-container__description">Don’t forget to pack your hiking boots. You’ll need them <br> to tackle Olympus Mons, the tallest planetary mountain in <br> our solar system. It’s two and a half times the size of <br> Everest!</p>
+                        <div class="destination__right-container__data">
+                            <div class="left">
+                                <p>AVG. DISTANCE</p>
+                                <p>225 MIL. KM</p>
+                            </div>
+                            <div class="right">
+                                <p>EST. TRAVEL TIME</p>
+                                <p>9 MONTHS</p>
+                            </div>
                         </div>
-                    </section>
-                </maim>
-            </div>
+                    </div>
+                </section>
+            </main>
         </body>
     
     </html>  
