--- a/destination-europa.html
+++ b/destination-europa.html
@@ -5,10 +5,10 @@
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
             <meta name="viewport" content="width=device=width, initial-sacle=1.0">
-            <title>NASA</title>
+            <title>EUROPA</title>
             <link rel="stylesheet" href="css/style.css">
         </head>
-        <body>
+        <body class="body__destination">
             <header>
                 <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
                 <nav class="header__nav">
@@ -21,6 +21,34 @@
                     </ul>
                 </nav>
             </header>
+            <main class="main__destination">
+                <section class="destination__left">
+                    <P class="destination__left-title"> <b>01</b>  PICK YOUR DESTINATION</P>
+                    <img src="/asset/destination/image-europa.png" alt="Imagen del planeta moon">
+                </section>
+                <section class="destination__right">
+                    <div class="destination__right-container">
+                        <ul class="destination__right-container__nav">
+                            <li><a href="/">MOON</a></li>
+                            <li><a href="/">MARS</a></li>
+                            <li><a href="/">EUROPA</a></li>
+                            <li><a href="/">TITAN</a></li>
+                        </ul>
+                        <h3 class="destination__right-container__title">EUROPA</h3>
+                        <p class="destination__right-container__description">The smallest of the four Galilean moons orbiting Jupiter, <br> Europa is a winter lover’s dream. With an icy surface, it’s <br> perfect for a bit of ice skating, curling, hockey, or simple <br> relaxation in your snug wintery cabin.</p>
+                        <div class="destination__right-container__data">
+                            <div class="left">
+                                <p>AVG. DISTANCE</p>
+                                <p>628 MIL. KM</p>
+                            </div>
+                            <div class="right">
+                                <p>EST. TRAVEL TIME</p>
+                                <p>3 YEARS</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </main>
         </body>
     
     </html>  
