Cree la estructura HTML  de los crew (commander, engineer, pilot, specialist)

--- a/crew-engineer.html
+++ b/crew-engineer.html
@@ -5,10 +5,10 @@
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
             <meta name="viewport" content="width=device=width, initial-sacle=1.0">
-            <title>NASA</title>
+            <title>ENGINEER</title>
             <link rel="stylesheet" href="css/style.css">
         </head>
-        <body>
+        <body class="body__crew">
             <header>
                 <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
                 <nav class="header__nav">
@@ -21,6 +21,26 @@
                     </ul>
                 </nav>
             </header>
+            <main class="main__crew">
+                <section class="main__crew-left">
+                    <p class="main__crew-left__title"> <b>02</b> Meet your crew </p>
+                    <div class="main__crew-left__info">
+                        <p>Flight Engineer</p>
+                        <p>Anousheh Ansari</p>
+                        <p>Anousheh Ansari is an Iranian American engineer and co- <br> founder of Prodea Systems. Ansari was the fourth self-funded space tourist, the first self- <br> funded woman to fly <br> to the ISS, and the first Iranian in space. </p>
+                    </div>
+                    <div class="main__crew-left__leyer">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </section>
+                <section class="main__crew-right">
+                    <img src="/" alt="Imagen de un comandante de la NASA">
+                </section>
+
+            </main>
         </body>
     
     </html>  
