--- a/crew-pilot.html
+++ b/crew-pilot.html
@@ -5,10 +5,10 @@
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
             <meta name="viewport" content="width=device=width, initial-sacle=1.0">
-            <title>NASA</title>
+            <title>PILOT</title>
             <link rel="stylesheet" href="css/style.css">
         </head>
-        <body>
+        <body class="body__crew">
             <header>
                 <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
                 <nav class="header__nav">
@@ -21,6 +21,24 @@
                     </ul>
                 </nav>
             </header>
+            <main class="main__crew">
+                <section class="main__crew-left">
+                    <p class="main__crew-left__title"> <b>02</b> Meet your crew </p>
+                    <div class="main__crew-left__info">
+                        <p>PILOT</p>
+                        <p>Victor Glover</p>
+                        <p>Pilot on the first operational flight of the SpaceX Crew <br> Dragon to the International Space Station. Glover is a <br> commander in the U.S. Navy where he pilots an F/A-18. <br> He was a crew member of Expedition 64, and served as a <br> station systems flight engineer. </p>
+                    </div>
+                    <div class="main__crew-left__leyer">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </section>
+                <section class="main__crew-right">
+                    <img src="/" alt="Imagen de un comandante de la NASA">
+                </section>
         </body>
     
     </html>  
