--- a/specialist.html
+++ b/specialist.html
@@ -5,10 +5,10 @@
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
             <meta name="viewport" content="width=device=width, initial-sacle=1.0">
-            <title>NASA</title>
+            <title>specialist</title>
             <link rel="stylesheet" href="css/style.css">
         </head>
-        <body>
+        <body class="body__crew">
             <header>
                 <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
                 <nav class="header__nav">
@@ -21,6 +21,24 @@
                     </ul>
                 </nav>
             </header>
+            <main class="main__crew">
+                <section class="main__crew-left">
+                    <p class="main__crew-left__title"> <b>02</b> Meet your crew </p>
+                    <div class="main__crew-left__info">
+                        <p>Mission Specialist </p>
+                        <p>MARK SHUTTLEWORTH</p>
+                        <p>Mark Richard Shuttleworth is the founder and CEO of <br> Canonical, the company behind the Linux-based Ubuntu <br> operating system. Shuttleworth became the first South <br> African to travel to space as a space tourist.</p>
+                    </div>
+                    <div class="main__crew-left__leyer">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </section>
+                <section class="main__crew-right">
+                    <img src="/" alt="Imagen de un comandante de la NASA">
+                </section>
         </body>
     
     </html>  
