--- a/crew-commander.html
+++ b/crew-commander.html
@@ -5,10 +5,10 @@
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
             <meta name="viewport" content="width=device=width, initial-sacle=1.0">
-            <title>NASA</title>
+            <title>COMMANDER</title>
             <link rel="stylesheet" href="css/style.css">
         </head>
-        <body>
+        <body class="body__crew">
             <header>
                 <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
                 <nav class="header__nav">
@@ -21,6 +21,26 @@
                     </ul>
                 </nav>
             </header>
+            <main class="main__crew">
+                <section class="main__crew-left">
+                    <p class="main__crew-left__title"> <b>02</b> Meet your crew </p>
+                    <div class="main__crew-left__info">
+                        <p>Commander </p>
+                        <p>Douglas Hurley</p>
+                        <p>Douglas Gerald Hurley is an American engineer, former <br> Marine Corps pilot and former NASA astronaut. He <br> launched into space for the third time as commander of <br> Crew Dragon Demo-2.</p>
+                    </div>
+                    <div class="main__crew-left__leyer">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </section>
+                <section class="main__crew-right">
+                    <img src="/" alt="Imagen de un comandante de la NASA">
+                </section>
+
+            </main>
             
         </body>
     
