--- a/crew-commander.html
+++ b/crew-commander.html
@@ -23,21 +23,24 @@
             </header>
             <main class="main__crew">
                 <section class="main__crew-left">
-                    <p class="main__crew-left__title"> <b>02</b> Meet your crew </p>
-                    <div class="main__crew-left__info">
-                        <p>Commander </p>
-                        <p>Douglas Hurley</p>
-                        <p>Douglas Gerald Hurley is an American engineer, former <br> Marine Corps pilot and former NASA astronaut. He <br> launched into space for the third time as commander of <br> Crew Dragon Demo-2.</p>
-                    </div>
-                    <div class="main__crew-left__leyer">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                    <div class="main__crew-left__container">
+                        <p class="main__crew-left__container-title"> <b>02</b> Meet your crew </p>
+                        <div class="main__crew-left__container-info">
+                            <p>COMMANDER</p>
+                            <p>Douglas Hurley</p>
+                            <p>Douglas Gerald Hurley is an American engineer, former <br> Marine Corps pilot and former NASA astronaut. He <br> launched into space for the third time as commander of <br> Crew Dragon Demo-2.</p>
+                        </div>
+                        <div class="main__crew-left__container-leyer">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
                     </div>
                 </section>
                 <section class="main__crew-right">
-                    <img src="/" alt="Imagen de un comandante de la NASA">
+                    
+                  <!-- <img src="/asset/crew/image-anousheh-ansari.png" alt="Imagen de un comandante de la NASA">  -->
                 </section>
 
             </main>
