Logre enfocar las imagenes de los crew

--- a/crew-commander.html
+++ b/crew-commander.html
@@ -40,7 +40,7 @@
                 </section>
                 <section class="main__crew-right">
                     
-                  <!-- <img src="/asset/crew/image-anousheh-ansari.png" alt="Imagen de un comandante de la NASA">  -->
+                  <img src="/asset/crew/image-douglas-hurley.png" alt="Imagen de un comandante de la NASA">  
                 </section>
 
             </main>
