--- a/crew-engineer.html
+++ b/crew-engineer.html
@@ -23,21 +23,24 @@
             </header>
             <main class="main__crew">
                 <section class="main__crew-left">
-                    <p class="main__crew-left__title"> <b>02</b> Meet your crew </p>
-                    <div class="main__crew-left__info">
-                        <p>Flight Engineer</p>
-                        <p>Anousheh Ansari</p>
-                        <p>Anousheh Ansari is an Iranian American engineer and co- <br> founder of Prodea Systems. Ansari was the fourth self-funded space tourist, the first self- <br> funded woman to fly <br> to the ISS, and the first Iranian in space. </p>
+                    <div class="main__crew-left__container">
+                        <p class="main__crew-left__container-title"> <b>02</b> Meet your crew </p>
+                        <div class="main__crew-left__container-info">
+                            <p>Flight Engineer</p>
+                            <p>Anousheh Ansari</p>
+                            <p>Anousheh Ansari is an Iranian American engineer and co- <br> founder of Prodea Systems. Ansari was the fourth self-funded space tourist, the first self- <br> funded woman to fly <br> to the ISS, and the first Iranian in space. </p>
+                        </div>
+                        <div class="main__crew-left__container-leyer">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
                     </div>
-                    <div class="main__crew-left__leyer">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                    </div>
+                   
                 </section>
                 <section class="main__crew-right">
-                    <img src="/" alt="Imagen de un comandante de la NASA">
+                    <img src="/asset/crew/image-anousheh-ansari.png" alt="Imagen de un comandante de la NASA">
                 </section>
 
             </main>
