--- a/specialist.html
+++ b/specialist.html
@@ -23,21 +23,24 @@
             </header>
             <main class="main__crew">
                 <section class="main__crew-left">
-                    <p class="main__crew-left__title"> <b>02</b> Meet your crew </p>
-                    <div class="main__crew-left__info">
-                        <p>Mission Specialist </p>
-                        <p>MARK SHUTTLEWORTH</p>
-                        <p>Mark Richard Shuttleworth is the founder and CEO of <br> Canonical, the company behind the Linux-based Ubuntu <br> operating system. Shuttleworth became the first South <br> African to travel to space as a space tourist.</p>
+                    <div class="main__crew-left__container">
+                        <p class="main__crew-left__container-title"> <b>02</b> Meet your crew </p>
+                        <div class="main__crew-left__container-info">
+                            <p>Mission Specialist </p>
+                            <p>MARK SHUTTLEWORTH</p>
+                            <p>Mark Richard Shuttleworth is the founder and CEO of <br> Canonical, the company behind the Linux-based Ubuntu <br> operating system. Shuttleworth became the first South <br> African to travel to space as a space tourist.</p>
+                        </div>
+                        <div class="main__crew-left__container-leyer">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
                     </div>
-                    <div class="main__crew-left__leyer">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                    </div>
+                   
                 </section>
                 <section class="main__crew-right">
-                    <img src="/" alt="Imagen de un comandante de la NASA">
+                    <img src="/asset/crew/image-mark-shuttleworth.png" alt="Imagen de un comandante de la NASA">
                 </section>
         </body>
     
