--- a/crew-pilot.html
+++ b/crew-pilot.html
@@ -23,21 +23,24 @@
             </header>
             <main class="main__crew">
                 <section class="main__crew-left">
-                    <p class="main__crew-left__title"> <b>02</b> Meet your crew </p>
-                    <div class="main__crew-left__info">
-                        <p>PILOT</p>
-                        <p>Victor Glover</p>
-                        <p>Pilot on the first operational flight of the SpaceX Crew <br> Dragon to the International Space Station. Glover is a <br> commander in the U.S. Navy where he pilots an F/A-18. <br> He was a crew member of Expedition 64, and served as a <br> station systems flight engineer. </p>
+                    <div class="main__crew-left__container">
+                        <p class="main__crew-left__container-title"> <b>02</b> Meet your crew </p>
+                        <div class="main__crew-left__container-info">
+                            <p>PILOT</p>
+                            <p>Victor Glover</p>
+                            <p>Pilot on the first operational flight of the SpaceX Crew <br> Dragon to the International Space Station. Glover is a <br> commander in the U.S. Navy where he pilots an F/A-18. <br> He was a crew member of Expedition 64, and served as a <br> station systems flight engineer. </p>
+                        </div>
+                        <div class="main__crew-left__container-leyer">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
                     </div>
-                    <div class="main__crew-left__leyer">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                    </div>
+                   
                 </section>
                 <section class="main__crew-right">
-                    <img src="/" alt="Imagen de un comandante de la NASA">
+                     <img src="/asset/crew/image-victor-glover.png" alt="Imagen de un comandante de la NASA"> 
                 </section>
         </body>
     
