Arregle los problemas de las imagenes del crew

--- a/crew-engineer.html
+++ b/crew-engineer.html
@@ -28,7 +28,7 @@
                         <div class="main__crew-left__container-info">
                             <p>Flight Engineer</p>
                             <p>Anousheh Ansari</p>
-                            <p>Anousheh Ansari is an Iranian American engineer and co- <br> founder of Prodea Systems. Ansari was the fourth self-funded space tourist, the first self- <br> funded woman to fly <br> to the ISS, and the first Iranian in space. </p>
+                            <p>Anousheh Ansari is an Iranian American engineer and co- <br> founder of Prodea Systems. Ansari was the fourth self- <br> funded space tourist, the first self-  funded woman to fly <br> to the ISS, and the first Iranian in space. </p>
                         </div>
                         <div class="main__crew-left__container-leyer">
                             <div></div>
