--- a/specialist.html
+++ b/specialist.html
@@ -22,12 +22,12 @@
                 </nav>
             </header>
             <main class="main__crew">
-                <section class="main__crew-left">
-                    <div class="main__crew-left__container">
+                <section class="main__crew-left ">
+                    <div class="main__crew-left__container specialist">
                         <p class="main__crew-left__container-title"> <b>02</b> Meet your crew </p>
-                        <div class="main__crew-left__container-info">
+                        <div class="main__crew-left__container-info ">
                             <p>Mission Specialist </p>
-                            <p>MARK SHUTTLEWORTH</p>
+                            <p class="spacialist">MARK SHUTTLEWORTH</p>
                             <p>Mark Richard Shuttleworth is the founder and CEO of <br> Canonical, the company behind the Linux-based Ubuntu <br> operating system. Shuttleworth became the first South <br> African to travel to space as a space tourist.</p>
                         </div>
                         <div class="main__crew-left__container-leyer">
