--- a/technology-spaceport.html
+++ b/technology-spaceport.html
@@ -8,7 +8,7 @@
             <title>NASA</title>
             <link rel="stylesheet" href="css/style.css">
         </head>
-        <body>
+        <body class="body__technology">
             <header>
                 <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
                 <nav class="header__nav">
@@ -21,6 +21,24 @@
                     </ul>
                 </nav>
             </header>
+            <main class="main__technology">
+                <div class="container">
+                    <p class="container__title">SPACE LAUNCH 101</p>
+                    <div class="container__info">
+                        <section class="container__info-left">
+                            <div>1</div>
+                            <div>2</div>
+                            <div>3</div>
+                        </section>
+                        <section class="container__info-right">
+                            <p>THE TERMINOLOGY…</p>
+                            <p>LAUNCH VEHICLE</p>
+                            <p>A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload <br> from Earth's surface to space, usually to <br> Earth orbit or beyond. Our WEB-X to <br> carrier rocket is the most powerful in operation. <br> Standing 150 metres tall, it's quite an awe-inspiring sight <br> on the launch pad!</p>
+                        </section>
+                    </div>
+                    <img src="/" alt="Vehicle" class="container__img">
+                </div>
+            </main>
         </body>
     
     </html>  
