I AM FINISH THE STYLE OF THE TECHNOLOGY VEHICLE PAGE

--- a/technology-vehicle.html
+++ b/technology-vehicle.html
@@ -23,7 +23,7 @@
             </header>
             <main class="main__technology">
                 <div class="container">
-                    <p class="container__title">SPACE LAUNCH 101</p>
+                    <p class="container__title"> <b>03</b> SPACELAUNCH 101</p>
                     <div class="container__info">
                         <section class="container__info-left">
                             <div>1</div>
@@ -33,10 +33,10 @@
                         <section class="container__info-right">
                             <p>THE TERMINOLOGY…</p>
                             <p>LAUNCH VEHICLE</p>
-                            <p>A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload <br> from Earth's surface to space, usually to <br> Earth orbit or beyond. Our WEB-X to <br> carrier rocket is the most powerful in operation. <br> Standing 150 metres tall, it's quite an awe-inspiring sight <br> on the launch pad!</p>
+                            <p>A launch vehicle or carrier rocket is a rocket-propelled <br> vehicle used  to carry a payload  from Earth's surface to <br> space, usually to  Earth  orbit or beyond. Our WEB-X to <br> carrier rocket is the most powerful in operation. <br> Standing 150 metres tall, it's quite an awe-inspiring sight <br> on the launch pad!</p>
                         </section>
                     </div>
-                    <img src="/" alt="Vehicle" class="container__img">
+                    <img src="/asset/technology/image-launch-vehicle-portrait.jpg" alt="Vehicle" class="container__img">
                 </div>
             </main>
         </body>
