complete all the styles of the technology pages

--- a/technology-capsule.html
+++ b/technology-capsule.html
@@ -5,7 +5,7 @@
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
             <meta name="viewport" content="width=device=width, initial-sacle=1.0">
-            <title>NASA</title>
+            <title>CAPSULE</title>
             <link rel="stylesheet" href="css/style.css">
         </head>
         <body class="body__technology">
@@ -32,11 +32,11 @@
                         </section>
                         <section class="container__info-right">
                             <p>THE TERMINOLOGY…</p>
-                            <p>LAUNCH VEHICLE</p>
-                            <p>A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload <br> from Earth's surface to space, usually to <br> Earth orbit or beyond. Our WEB-X to <br> carrier rocket is the most powerful in operation. <br> Standing 150 metres tall, it's quite an awe-inspiring sight <br> on the launch pad!</p>
+                            <p>SPACE CAPSULE</p>
+                            <p>A space capsule is an often-crewed spacecraft that uses <br> a blunt-body reentry capsule to reenter the Earth's <br> atmosphere without wings. Our capsule is where you'll <br> spend your time during the flight. It includes a space gym <br> , cinema, and plenty of other activities to keep you <br> entertained.</p>
                         </section>
                     </div>
-                    <img src="/" alt="Vehicle" class="container__img">
+                    <img src="/asset/technology/image-space-capsule-portrait.jpg" alt="Capsule" class="container__img">
                 </div>
             </main>
         </body>
