--- a/technology-spaceport.html
+++ b/technology-spaceport.html
@@ -5,7 +5,7 @@
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
             <meta name="viewport" content="width=device=width, initial-sacle=1.0">
-            <title>NASA</title>
+            <title>SPACEPORT</title>
             <link rel="stylesheet" href="css/style.css">
         </head>
         <body class="body__technology">
@@ -32,11 +32,11 @@
                         </section>
                         <section class="container__info-right">
                             <p>THE TERMINOLOGY…</p>
-                            <p>LAUNCH VEHICLE</p>
-                            <p>A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload <br> from Earth's surface to space, usually to <br> Earth orbit or beyond. Our WEB-X to <br> carrier rocket is the most powerful in operation. <br> Standing 150 metres tall, it's quite an awe-inspiring sight <br> on the launch pad!</p>
+                            <p>SPACEPORT</p>
+                            <p>A spaceport or cosmodrome is a site for launching (or <br> receiving) spacecraft, by analogy to the seaport for ships <br> or airport for aircraft. Based in the famous Cape <br> Canaveral, our spaceport is ideally situated to take <br> advantage of the Earth’s rotation for launch.</p>
                         </section>
                     </div>
-                    <img src="/" alt="Vehicle" class="container__img">
+                    <img src="/asset/technology/image-spaceport-portrait.jpg" alt="SPACEPORT" class="container__img">
                 </div>
             </main>
         </body>
