--- a/technology-vehicle.html
+++ b/technology-vehicle.html
@@ -5,7 +5,7 @@
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
             <meta name="viewport" content="width=device=width, initial-sacle=1.0">
-            <title>NASA</title>
+            <title>VEHICLE</title>
             <link rel="stylesheet" href="css/style.css">
         </head>
         <body class="body__technology">
