Add links and exchange fonds

--- a/destination-mars.html
+++ b/destination-mars.html
@@ -14,10 +14,10 @@
                 <nav class="header__nav">
                     <div class="header__nav-border"></div>
                     <ul class="header__nav-items">
-                        <li><a href="/"><b>00</b>  HOME</a> </li>
-                        <li><a href="/"><b>01</b>  DESTINATION</a> </li>
-                        <li><a href="/"> <b>02</b>  CREW</a></li>
-                        <li><a href="/"><b>03</b>  TECHNOLOGY</a> </li>
+                        <li><a href="/index.html"><b>00</b>  HOME</a> </li>
+                        <li><a href="/destination-moon.html"><b>01</b>  DESTINATION</a> </li>
+                        <li><a href="/crew-engineer.html"> <b>02</b>  CREW</a></li>
+                        <li><a href="/technology-vehicle.html"><b>03</b>  TECHNOLOGY</a> </li>
                     </ul>
                 </nav>
             </header>
@@ -29,10 +29,10 @@
                 <section class="destination__right">
                     <div class="destination__right-container">
                         <ul class="destination__right-container__nav">
-                            <li><a href="/">MOON</a></li>
-                            <li><a href="/">MARS</a></li>
-                            <li><a href="/">EUROPA</a></li>
-                            <li><a href="/">TITAN</a></li>
+                            <li><a href="/destination-moon.html">MOON</a></li>
+                            <li><a href="/destination-mars.html">MARS</a></li>
+                            <li><a href="/destination-europa.html">EUROPA</a></li>
+                            <li><a href="/destination-titan.html">TITAN</a></li>
                         </ul>
                         <h3 class="destination__right-container__title">MARS</h3>
                         <p class="destination__right-container__description">Don’t forget to pack your hiking boots. You’ll need them <br> to tackle Olympus Mons, the tallest planetary mountain in <br> our solar system. It’s two and a half times the size of <br> Everest!</p>
