--- a/destination-titan.html
+++ b/destination-titan.html
@@ -14,10 +14,10 @@
                 <nav class="header__nav">
                     <div class="header__nav-border"></div>
                     <ul class="header__nav-items">
-                        <li><a href="/"><b>00</b>  HOME</a> </li>
-                        <li><a href="/"><b>01</b>  DESTINATION</a> </li>
-                        <li><a href="/"> <b>02</b>  CREW</a></li>
-                        <li><a href="/"><b>03</b>  TECHNOLOGY</a> </li>
+                        <li><a href="/index.html"><b>00</b>  HOME</a> </li>
+                        <li><a href="/destination-moon.html"><b>01</b>  DESTINATION</a> </li>
+                        <li><a href="/crew-engineer.html"> <b>02</b>  CREW</a></li>
+                        <li><a href="/technology-vehicle.html"><b>03</b>  TECHNOLOGY</a> </li>
                     </ul>
                 </nav>
             </header>
@@ -29,10 +29,10 @@
                 <section class="destination__right">
                     <div class="destination__right-container">
                         <ul class="destination__right-container__nav">
-                            <li><a href="/">MOON</a></li>
-                            <li><a href="/">MARS</a></li>
-                            <li><a href="/">EUROPA</a></li>
-                            <li><a href="/">TITAN</a></li>
+                            <li><a href="/destination-moon.html">MOON</a></li>
+                            <li><a href="/destination-mars.html">MARS</a></li>
+                            <li><a href="/destination-europa.html">EUROPA</a></li>
+                            <li><a href="/destination-titan.html">TITAN</a></li>
                         </ul>
                         <h3 class="destination__right-container__title">TITAN</h3>
                         <p class="destination__right-container__description">The only moon known to have a dense atmosphere other <br> than Earth, Titan is a home away from home (just a few <br> hundred degrees colder!). As a bonus, you get striking <br> views of the Rings of Saturn.</p>
