--- a/technology-vehicle.html
+++ b/technology-vehicle.html
@@ -14,10 +14,10 @@
                 <nav class="header__nav">
                     <div class="header__nav-border"></div>
                     <ul class="header__nav-items">
-                        <li><a href="/"><b>00</b>  HOME</a> </li>
-                        <li><a href="/"><b>01</b>  DESTINATION</a> </li>
-                        <li><a href="/"> <b>02</b>  CREW</a></li>
-                        <li><a href="/"><b>03</b>  TECHNOLOGY</a> </li>
+                        <li><a href="/index.html"><b>00</b>  HOME</a> </li>
+                        <li><a href="/destination-moon.html"><b>01</b>  DESTINATION</a> </li>
+                        <li><a href="/crew-engineer.html"> <b>02</b>  CREW</a></li>
+                        <li><a href="/technology-vehicle.html"><b>03</b>  TECHNOLOGY</a> </li>
                     </ul>
                 </nav>
             </header>
