I corrected the specialist crew page

--- a/specialist.html
+++ b/specialist.html
@@ -42,6 +42,7 @@
                 <section class="main__crew-right">
                     <img src="/asset/crew/image-mark-shuttleworth.png" alt="Imagen de un comandante de la NASA">
                 </section>
+            </main>    
         </body>
     
     </html>  
