I am going to make changes to the crew and technology page so I can create links

--- a/crew-engineer.html
+++ b/crew-engineer.html
@@ -31,10 +31,10 @@
                             <p>Anousheh Ansari is an Iranian American engineer and co- <br> founder of Prodea Systems. Ansari was the fourth self- <br> funded space tourist, the first self-  funded woman to fly <br> to the ISS, and the first Iranian in space. </p>
                         </div>
                         <div class="main__crew-left__container-leyer">
-                            <div></div>
-                            <div></div>
-                            <div></div>
-                            <div></div>
+                            <a href="/crew-engineer.html"><div></div></a> 
+                           <a href="/specialist.html"><div></div></a> 
+                           <a href="/crew-commander.html"><div></div></a> 
+                           <a href="/crew-pilot.html"><div></div></a>
                         </div>
                     </div>
                    
