--- a/technology-capsule.html
+++ b/technology-capsule.html
@@ -25,11 +25,11 @@
                 <div class="container">
                     <p class="container__title">SPACE LAUNCH 101</p>
                     <div class="container__info">
-                        <section class="container__info-left">
-                            <div>1</div>
-                            <div>2</div>
-                            <div>3</div>
-                        </section>
+                        <ul class="container__info-left">
+                            <li> <a href="/technology-vehicle.html">1</a> </li>
+                            <li> <a href="/technology-capsule.html">2</a> </li>
+                            <li> <a href="/technology-spaceport.html">3</a> </li>
+                        </ul>
                         <section class="container__info-right">
                             <p>THE TERMINOLOGY…</p>
                             <p>SPACE CAPSULE</p>
