--- a/crew-commander.html
+++ b/crew-commander.html
@@ -31,10 +31,10 @@
                             <p>Douglas Gerald Hurley is an American engineer, former <br> Marine Corps pilot and former NASA astronaut. He <br> launched into space for the third time as commander of <br> Crew Dragon Demo-2.</p>
                         </div>
                         <div class="main__crew-left__container-leyer">
-                            <div></div>
-                            <div></div>
-                            <div></div>
-                            <div></div>
+                            <a href="/crew-engineer.html"><div></div></a> 
+                           <a href="/specialist.html"><div></div></a> 
+                           <a href="/crew-commander.html"><div></div></a> 
+                           <a href="/crew-pilot.html"><div></div></a>
                         </div>
                     </div>
                 </section>
