--- a/crew-pilot.html
+++ b/crew-pilot.html
@@ -31,10 +31,10 @@
                             <p>Pilot on the first operational flight of the SpaceX Crew <br> Dragon to the International Space Station. Glover is a <br> commander in the U.S. Navy where he pilots an F/A-18. <br> He was a crew member of Expedition 64, and served as a <br> station systems flight engineer. </p>
                         </div>
                         <div class="main__crew-left__container-leyer">
-                            <div></div>
-                            <div></div>
-                            <div></div>
-                            <div></div>
+                           <a href="/crew-engineer.html"><div></div></a> 
+                           <a href="/specialist.html"><div></div></a> 
+                           <a href="/crew-commander.html"><div></div></a> 
+                           <a href="/crew-pilot.html"><div></div></a> 
                         </div>
                     </div>
                    
