--- a/specialist.html
+++ b/specialist.html
@@ -31,10 +31,10 @@
                             <p>Mark Richard Shuttleworth is the founder and CEO of <br> Canonical, the company behind the Linux-based Ubuntu <br> operating system. Shuttleworth became the first South <br> African to travel to space as a space tourist.</p>
                         </div>
                         <div class="main__crew-left__container-leyer">
-                            <div></div>
-                            <div></div>
-                            <div></div>
-                            <div></div>
+                            <a href="/crew-engineer.html"><div></div></a> 
+                           <a href="/specialist.html"><div></div></a> 
+                           <a href="/crew-commander.html"><div></div></a> 
+                           <a href="/crew-pilot.html"><div></div></a>
                         </div>
                     </div>
                    
